--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "cross-env NODE_OPTIONS=--no-deprecation next build",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation next dev --turbo",
     "devsafe": "rm -rf .next && cross-env NODE_OPTIONS=--no-deprecation next dev",
     "generate:importmap": "cross-env NODE_OPTIONS=--no-deprecation payload generate:importmap",
     "generate:types": "cross-env NODE_OPTIONS=--no-deprecation payload generate:types",
@@ -15,17 +15,19 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/next": "latest",
-    "@payloadcms/payload-cloud": "latest",
-    "@payloadcms/richtext-lexical": "latest",
+    "@libsql/client": "^0.14.0",
+    "@payloadcms/db-sqlite": "^3.16.0",
+    "@payloadcms/live-preview": "^3.16.0",
+    "@payloadcms/next": "^3.16.0",
+    "@payloadcms/payload-cloud": "^3.16.0",
+    "@payloadcms/richtext-lexical": "^3.16.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
-    "next": "15.1.0",
-    "payload": "latest",
+    "next": "15.1.4",
+    "payload": "^3.16.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "sharp": "0.32.6",
-    "@payloadcms/db-sqlite": "latest"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
